# tasty-parallel

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build_cmake.yml
applications/: CMakeLists.txt
applications/m_dummy/: CMakeLists.txt  m_dummy.m.cpp  m_dummy_dummyapplication.cpp  m_dummy_dummyapplication.g.cpp  m_dummy_dummyapplication.t.cpp
applications/m_dummy/package/: m_dummy.mem
cmake/: tasty_add_component_gtests.cmake  tasty_configure_target_tests.cmake  tasty_setup_target_uor.cmake
groups/: CMakeLists.txt
groups/par/: CMakeLists.txt
groups/par/pars/: CMakeLists.txt  pars_dummy.cpp  pars_dummy.g.cpp  pars_dummy.t.cpp  pars_dummy_subordinate.cpp  pars_dummy_subordinate.g.cpp  pars_dummy_subordinate.t.cpp
groups/par/pars/package/: pars.mem
